fix(interface): widen topbar align rail to 44px to match nav rail
Made-with: Cursor

--- a/interface/src/components/DesktopShell/DesktopShell.module.css
+++ b/interface/src/components/DesktopShell/DesktopShell.module.css
@@ -177,7 +177,7 @@
 }
 
 .topbarAlignRail > :first-child > :first-child {
-  width: 42px;
+  width: 44px;
   justify-content: center;
   flex-shrink: 0;
 }
